...
                    android:padding="10dp"
                    android:text="Steps"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/step_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

...
